10rolling-deplyments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2024-06-13T01:53:51Z"
  generation: 2
  labels:
    app: bandicoot
  name: bandicoot
  namespace: default
  resourceVersion: "338869"
  uid: 39675ac0-15fa-4a3e-add6-1a7c4c294e00
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: bandicoot
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bandicoot
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:green
        imagePullPolicy: IfNotPresent
        name: kuard-amd64
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-06-13T01:53:51Z"
    lastUpdateTime: "2024-06-13T03:23:04Z"
    message: ReplicaSet "bandicoot-6468667949" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2024-06-13T21:18:45Z"
    lastUpdateTime: "2024-06-13T21:18:45Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
