11pi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  selector:
    matchLabels:
      run: pihole
  replicas: 1
  template:
    metadata:
      labels:
        run: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        ports:
        - containerPort: 80
