11pi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress-pihole
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            # Redirect traffic to service on port 80
            backend:
              service:
                name: pihole
                port:
                  number: 80
